--- a/index5.html
+++ b/index5.html
@@ -1,61 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>2nd Year Programs</title>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>4th Year - Topics | Placement Prep</title>
 <style>
-  * {margin:0;padding:0;box-sizing:border-box;font-family:"Poppins",sans-serif;}
-  body {background: url("https://www.admissionlelo.in/upload/1555574153campus%203.jpg") center/cover no-repeat fixed; color:#fff; min-height:100vh; display:flex; flex-direction:column; align-items:center;}
-  body::before {content:"";position:absolute; inset:0; background:rgba(0,0,0,0.75); z-index:-1;}
-  h1 {margin:40px 0 20px; font-size:2.5rem; color:#00ffae; text-align:center;}
-  .container {width:90%; max-width:1000px;}
-  .program-card {background: rgba(255,255,255,0.08); border-radius:15px; margin:15px 0; padding:20px; cursor:pointer; border:1px solid rgba(255,255,255,0.2); transition:0.3s; position:relative; overflow:hidden;}
-  .program-card:hover {transform:translateY(-5px) scale(1.02); border-color:#00ffae; box-shadow:0 0 20px #00ffae;}
-  .program-card span {position:relative; z-index:1; font-weight:600;}
-  .program-card::before {content:""; position:absolute; inset:0; background:linear-gradient(45deg,#00ffae,#ffcc00); opacity:0; transition:0.4s;}
-  .program-card:hover::before {opacity:0.2;}
-  .code {display:none; margin-top:15px; background:rgba(0,0,0,0.6); padding:15px; border-radius:10px; font-family:monospace; white-space:pre-wrap;}
+  body { font-family:'Poppins',sans-serif; margin:0; padding:0; background:url("https://www.admissionlelo.in/upload/1555574153campus%203.jpg") center/cover no-repeat fixed; color:#fff; min-height:100vh;}
+  body::before { content:""; position:absolute; inset:0; background: rgba(0,0,0,0.75); z-index:-1;}
+  .container { max-width:1000px; margin:auto; padding:50px 20px;}
+  h1 { text-align:center; color:#00bfff; font-size:2.5rem; margin-bottom:20px; text-shadow:0 0 10px #00bfff;}
+  .tabs { display:flex; justify-content:center; margin-bottom:30px; flex-wrap:wrap;}
+  .tab-btn { background:linear-gradient(135deg,#4caf50,#81c784); color:#fff; border:none; padding:12px 25px; margin:5px; border-radius:10px; cursor:pointer; font-weight:600; transition:0.3s;}
+  .tab-btn.active, .tab-btn:hover { box-shadow:0 0 20px #fff; transform:translateY(-2px);}
+  .content { display:none; background: rgba(255,255,255,0.08); padding:25px; border-radius:15px; margin-bottom:50px;}
+  .content pre { background: rgba(0,0,0,0.5); padding:15px; border-radius:10px; overflow-x:auto; color:#e6f7ff;}
+  #backBtn { display:block; margin:auto; padding:10px 25px; border:none; border-radius:10px; background:linear-gradient(135deg,#ff5722,#ff9800); color:#fff; font-weight:600; cursor:pointer; transition:0.3s;}
+  #backBtn:hover { transform:translateY(-2px); box-shadow:0 5px 15px rgba(255,255,255,0.5);}
 </style>
 </head>
 <body>
-<h1>2nd Year Programming Exercises</h1>
 <div class="container">
-  <script>
-    const programs = [
-      "Object Oriented Programming",
-      "Classes and Objects",
-      "Constructor and Destructor",
-      "Static Members",
-      "Inheritance Basics",
-      "Polymorphism",
-      "Operator Overloading",
-      "Exception Handling",
-      "File I/O Basics",
-      "Templates",
-      "Linked List Implementation",
-      "Stack Implementation",
-      "Queue Implementation",
-      "Doubly Linked List",
-      "Binary Search Tree",
-      "Recursion Practice",
-      "Sorting Algorithms",
-      "Searching Algorithms",
-      "Dynamic Memory Allocation",
-      "Simple Project: Banking System"
-    ];
+  <h1>4th Year - Topics</h1>
+  <div class="tabs">
+    <button class="tab-btn active" onclick="openTab('dsa', this)">DSA</button>
+    <button class="tab-btn" onclick="openTab('c', this)">C Programming</button>
+    <button class="tab-btn" onclick="openTab('aptitude', this)">Aptitude</button>
+  </div>
 
-    programs.forEach((prog,i)=>{
-      document.write(`
-        <div class="program-card" onclick="toggleCode('code${i}')">
-          <span>${i+1}. ${prog}</span>
-          <div class="code" id="code${i}">// Code for "${prog}" goes here</div>
-        </div>
-      `);
-    });
+  <div id="dsa" class="content" style="display:block;">
+    <h2>DSA Exercises - 4th Year</h2>
+    <pre>
+// Example: Linked List
+#include <stdio.h>
+struct Node{ int data; struct Node *next;};
+    </pre>
+  </div>
 
-    function toggleCode(id){ const el=document.getElementById(id); el.style.display=el.style.display==="block"?"none":"block";}
-  </script>
+  <div id="c" class="content">
+    <h2>C Programming Exercises - 4th Year</h2>
+    <pre>
+// Example: File Handling
+#include <stdio.h>
+int main(){ FILE *f=fopen("file.txt","w"); fprintf(f,"Hello"); fclose(f); return 0;}
+    </pre>
+  </div>
+
+  <div id="aptitude" class="content">
+    <h2>Aptitude Exercises - 4th Year</h2>
+    <pre>Problem: Solve x^2 - 5x + 6=0. Solution: x=2,3</pre>
+  </div>
+
+  <button id="backBtn" onclick="goBack()">⬅ Back to Track Your Year</button>
 </div>
+
+<script>
+function openTab(id, btn){
+  document.querySelectorAll('.tab-btn').forEach(b=>b.classList.remove('active'));
+  btn.classList.add('active');
+  document.querySelectorAll('.content').forEach(c=>c.style.display='none');
+  document.getElementById(id).style.display='block';
+}
+function goBack(){ window.location.href='index2.html'; }
+</script>
 </body>
 </html>
